--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Alan Maldonado - Portfolio</title>
         <link
             rel="shortcut icon"
-            href="./public/images/logo-remove-bg.png"
+            href="/images/logo-remove-bg.webp"
             type="image/svg+xml"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
